<resources>
    <string name="app_name">CasaEmOrdem</string>
    <string name="camp_Txt_nome">Nome</string>
    <string name="camp_Txt_email">Email</string>
    <string name="camp_Txt_senha">Senha</string>
    <string name="camp_Txt_confirmar_senha">Confirmar Senha</string>
    <string name="camp_Txt_prof">Profissão</string>

    //Pedro Alves
    <string name="pedroAlvesPrudutos">
•Cabos Elétricos de Alta Capacidade (Genreral Cable, Eletroflex)
\n•Disjuntores e Fusíveis (Eaton, Siemens, WEG)
\n•Tomadas e Interruptores (Oda, Kanoo, Tampico)
\n•Transformadores e Redutores de Tensão (WEG, ABB, CEMIG)
\n•Cabos de Controle(Mendel, Eletroflex, Siemens)</string>
    <string name="pedroAlvesDesc">
  •Profissional experiente na área Elétrica
\n•Eletricista Predial/Residencial/Industrial
\n•Utilizo os materiais de mais alta qualidade na execuções de meus serviços
\n•Atendimento residencial
\n•Contratações freelances também são aceitas</string>

    //Maria Luiza
    <string name="mariaLuizaProdutos">
•Veja
\n•nCif
\n•Diabo Verde
\n•Omo
\n•Pinho Sol
\n•Mr Musculo</string>
    <string name="mariaLuizaDesc">
  •Profissional experiente na área de Limpeza
\n•Faxineira residencial
\n•Materiais de limpeza de alta qualidade e de alta potência
\n•Serviço somente de limpeza, passar roupa pode ser negociado</string>

    //Matheus
    <string name="matheusProdutos">
•Tubos (Amanco e Tigre)
\n•Válvulas (IMI)
\n•Torneiras (Deca, Atlas e Lorenzetti)
\n•Vedantes e Selantes(Sika e 3M)
\n•Ferramentas Pessoais</string>
    <string name="matheusDesc">
  •Profissional experiente na área de Hidráulica
\n•Serviço de hidráulica residencial e industrial
\n•Drenagem eficientes, sem problemas de entupimento
\n•Produtos de qualidade para controle de fluxo de água, com modelos de alta durabilidade.</string>

    //Eric Gomes
    <string name="ericGomesProdutos">
•Fios (Mendel)
\n•Cabos (Mendel)
\n•Interruptores e Tomadas (Intelbras)
\n•Caixas de Passagem(Ducab)</string>
    <string name="ericGomesDesc">
 •Profissional experiente na área Elétrica
\n•Serviço residencial
\n•Equipamentos de segurança para evitar sobrecargas e curto-circuitos
\n•Aferir a resistência elétrica e garantir que os circuitos estejam funcionando corretamente.</string>

    //Warlison
    <string name="warlisonProdutos">
•Lâmpadas e Luminárias
\n•Fios e Cabos (Mendel, Multilaser, Eletroflex)
\n•Caixas de Passagem (Plasbil, Ducab)
\n•Interruptores e Tomadas (Tampico, Togrill, Intelbras))</string>
    <string name="warlisonDesc">
 •Profissional experiente na área Elétrica
\n•Serviço residencial
\n•Produtos eficientes para instalação e reposição de iluminação em residências e empresas.
\n•Diferentes bitolas e materiais para garantir a instalação segura e eficiente.</string>

    //Bruno Vieira
    <string name="brunoVieiraProdutos">
•Detergentes (Ypê)
\n•Sabões (Ypê)
\n•Limpa Vidro (Veja)
\n•Vassouras, rodos e panos
\n•Aspirador</string>
    <string name="brunoVieiraDesc">
•Profissional experiente na área de limpeza de Escritórios
\n•Serviço de escritórios e salas comerciais.
\n•Limpeza detalhada de superfícies, sem riscos de danos.
\n•Limpeza geral de superfícies, utensílios, móveis e pisos.</string>

    //David
    <string name="DavidProdutos">
•Fios e Cabos (Gerdau, Mennekes, Eletroflex)
\n•Interruptores e Tomadas (Intelbras, Togrill)
\n•Multímetros e Testadores</string>
    <string name="davidDesc">
•Profissional experiente na área Elétrica
\n•Instalação de Circuitos Elétricos: Criação e instalação de sistemas elétricos completos para residências e empresas.
\n•Instalação de Tomadas e Interruptores: Colocação de novos pontos de energia e controle de luz em qualquer ambiente.
\n•Reparo e Substituição de Fios e Cabos: Reparos em circuitos elétricos danificados, trocas de fios e cabos antigos.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>